--- a/notes/2015-06-19.md
+++ b/notes/2015-06-19.md
@@ -18,3 +18,6 @@ Franz: Wir haben Projektplan.
     * In der Datenbank gerne für alles Timestamps,
   * in CITE URNs für Transcriptions nach der AOI username + timestamp + '.md'
 * Thomas hat andere Phasen während der Diskussion gelesen.
+
+First Milestone auf Github angelegt,
+* Phase 1 aus [projectPlan.md](https://github.com/runjak/TranscriptionDesk/blob/master/projectPlan.md) als issues realisiert.
