--- a/notes/2015-06-26.md
+++ b/notes/2015-06-26.md
@@ -5,7 +5,7 @@ Mitschrift, 2015-06-26
   Dabei gab es Probleme, und der aktuelle Kurs ist,
   ein Ubuntu in VirtualBox zu installieren, und einzurichten,
   damit eine Ausweichmöglichkeit bereit steht.
-* Am Whiteboard haben wir ein Diagramm für unsere Architektur entwickelt.
-    * Siehe 2015-06-26.jpg
-    * Dazu gibt es auch ein mit yed erstelltes Diagramm.
+* Am Whiteboard haben wir ein Diagramm für unsere Architektur entwickelt:
+  ![2015-06-26.jpg](https://raw.githubusercontent.com/runjak/TranscriptionDesk/master/notes/2015-06-26.jpg)
+    * Dazu gibt es auch ein mit yed erstelltes Diagramm unter [notes/2015-06-26.{svg,graphml}](https://github.com/runjak/TranscriptionDesk/blob/master/notes/2015-06-26.svg).
 * Robert hat sich weiter in bootstrap und PHP eingearbeitet.
