--- a/notes/2015-07-03.md
+++ b/notes/2015-07-03.md
@@ -1,4 +1,15 @@
-Todos für die Arbeitsoberfläche der Nutzer, orientiert am aktuellen Stand, 2015-07-03
+Mitschrift, 2015-07-03
+===
+
+* Vagrant funktioniert bei Olli.
+  CRLF & Windows is a world of pain.
+* Robert hat ein Mockup gebaut,
+  in dem panning,zooming und drawbox anzusehen sind.
+* Olli und Robert arbeiteten am Mockup.
+* Franz und Jakob wühlten im Opauth code, und fanden bugs.
+  * Dazu wird ein Patch gebaut.
+
+Todos für die Arbeitsoberfläche der Nutzer, orientiert am aktuellen Stand
 ===
 
 Ideen zu kommenden Funktionen:
