Updated ER diagram
- This is to reflect the database decisions from our last meeting.

--- a/notes/2015-06-24.md
+++ b/notes/2015-06-24.md
@@ -5,7 +5,7 @@ Mitschrift, 2015-06-24
 * Olli bring nächstes Mal einen Laptop mit,
   damit wir alle ein funktionierendes Setup haben.
 * Wir haben ein ER Diagramm für die Datenbank angefangen.
-    * Mit [yed](https://www.yworks.com/en/products/yfiles/yed/) wurde dazu ER.2015-06-14.graphml angelegt, und auch ein [.svg](https://github.com/runjak/TranscriptionDesk/blob/master/notes/ER.2015-06-14.svg) generiert.
+    * Mit [yed](https://www.yworks.com/en/products/yfiles/yed/) wurde dazu ER.graphml angelegt, und auch ein [.svg](https://github.com/runjak/TranscriptionDesk/blob/master/notes/ER.svg) generiert.
     * Für areas of interest und transcriptions wollen wir [copy-on-write](https://en.wikipedia.org/wiki/Copy-on-write) funktionalitäten benutzen, und dadurch Editieren und die Existenz mehrerer Versionen realisieren.
     * Es muss geklärt werden, ob beim Editieren eine Referenz auf den Vorgänger behalten werden soll.
       
