Renamed 2015-06-26.{svg,graphml} -> components.{svg,graphml}
- Also updated this diagram to reflect our current design,
  so that it makes more sense to use it in the upcoming presentation.

--- a/notes/2015-06-26.md
+++ b/notes/2015-06-26.md
@@ -7,5 +7,5 @@ Mitschrift, 2015-06-26
   damit eine Ausweichmöglichkeit bereit steht.
 * Am Whiteboard haben wir ein Diagramm für unsere Architektur entwickelt:
   ![2015-06-26.jpg](https://raw.githubusercontent.com/runjak/TranscriptionDesk/master/notes/2015-06-26.jpg)
-    * Dazu gibt es auch ein mit yed erstelltes Diagramm unter [notes/2015-06-26.{svg,graphml}](https://github.com/runjak/TranscriptionDesk/blob/master/notes/2015-06-26.svg).
+    * Dazu gibt es auch ein mit yed erstelltes Diagramm unter [notes/components.{svg,graphml}](https://github.com/runjak/TranscriptionDesk/blob/master/notes/components.svg).
 * Robert hat sich weiter in bootstrap und PHP eingearbeitet.
