verbesserte Kapiteleinleitungen Projektbericht, Notizen als comments

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -12,6 +12,8 @@
 %\date{März 2015}
 
 \begin{document}
+%TODO: Stets zwei-drei Sätze Kapiteleinleitung beachten, englische Fachbegriffe auf ein Minimum reduzieren und nicht mehrere Begriffe für eine Semantik nutzen
+% z.B. Nutzer statt User, Projekt statt Praktikum
 
 \maketitle
 
@@ -23,11 +25,12 @@ Alle Quelldatein und Installationsanleitungen, usw… gibt es auf GitHub (+ URL,
 \tableofcontents
 \newpage
 \section{Einleitung}
-Im Zuge des Moduls <modul> haben wir dieses Projekt gemacht.
+Im Zuge des Moduls <modul> haben wir dieses studentische Projekt gemacht.
 
 Erläuterung der Dokumentstruktur, aka in diesem Bericht schreiben wir zuerst über <foo>, dann über <bar>.
 Später reden wir über <HerpDerp> und letztendlich schließen wir mit <Marderschaden>.
 \section{Theoretische Grundlagen}
+In diesem Kapitel sollen die Grundlagen für die späteren Erläuterungen gelegt werden. Dazu soll zunächst die Definition von Citizen Science aus der Vorlesung rekapituliert und auf verschiedene Deutungen des Begriffes eingegangen werden, um anschließend eine Arbeitsdefinition für unser Projekt zu geben. Dazu sei auch auf Literatur zum Thema verwiesen.
 \subsection{Definition, Citizen Science}
 Zusammenfassung entsprechender Paper + Zitieren.
 Unsere Working Definition sollte hier erklärt werden,
@@ -44,6 +47,7 @@ Zitate, wo diese Kathegorien her kommen.
 \item baz
 \end{enumerate}
 \section{Projektübersicht}
+In diesem Kapitel soll eine grundlegende Übersicht über das Projekt und dessen Zielstellung gegeben werden. Dazu soll ausgehend von der Projektvision die Struktur der Datenbasis erläutert und die erwartete Nutzerbasis reflektiert werden.
 \subsection{Ziele}
 Warum haben wir <herp> gemacht?
 Rückbezug zu unserer Definition von Citizen Science.
