--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -30,17 +30,17 @@ Im Zuge des Moduls <modul> haben wir dieses studentische Projekt gemacht.
 Erläuterung der Dokumentstruktur, aka in diesem Bericht schreiben wir zuerst über <foo>, dann über <bar>.
 Später reden wir über <HerpDerp> und letztendlich schließen wir mit <Marderschaden>.
 \section{Theoretische Grundlagen}
-In diesem Kapitel sollen die Grundlagen für die späteren Erläuterungen gelegt werden. Dazu soll zunächst die Definition von Citizen Science aus der Vorlesung rekapituliert und auf verschiedene Deutungen des Begriffes eingegangen werden, um anschließend eine Arbeitsdefinition für unser Projekt zu geben. Dazu sei auch auf Literatur zum Thema verwiesen.
+In diesem Kapitel sollen die Grundlagen für die späteren Erläuterungen gelegt werden. Dazu soll zunächst die Definition von Citizen Science aus der Vorlesung rekapituliert und auf verschiedene Deutungen des Begriffes eingegangen werden, um anschließend eine Arbeitsdefinition für unser Projekt zu geben und es in die Kategorien der Citizen Science nach <Bentham?> einzuordnen. Dazu sei auch auf Literatur zum Thema verwiesen.
 \subsection{Definition, Citizen Science}
 Zusammenfassung entsprechender Paper + Zitieren.
 Unsere Working Definition sollte hier erklärt werden,
 und mit anderen Definitionen von Citizen Science verglichen werden.
 Zitat von Bentham bietet sich hier an.
-\subsection{Kathegorien der Citizen Science}
-Einordnung unseres Projekts entsprechend der Kathegorien für Citizen Science,
+\subsection{Kategorien der Citizen Science}
+Einordnung unseres Projekts entsprechend der Kategorien für Citizen Science,
 wie wir sie in der Vorlesung kennen lernten.
 Robert sagt wir sind Dings zwei.
-Zitate, wo diese Kathegorien her kommen.
+Zitate, wo diese Kategorien her kommen.
 \begin{enumerate}
 \item foo
 \item bar
