--- a/projektbericht/references.bib
+++ b/projektbericht/references.bib
@@ -1,13 +1,32 @@
-@Book{Kuhn,
- author = {Thomas S. Kuhn},
- title = {Die Struktur wissenschaftlicher Revolutionen},
- publisher = {Suhrkamp},
- location = {Frankfurt a. Main}.
- year = {1976}
+@misc{Wiederhold,
+author = {Brenda K. Wiederhold},
+title = {Citizen Scientists Generate Benefits for Researchers, Educators, Society and Themselves. Cyberpsychology, Behaviour and Social Networking, 14(12)},
+year = {2011},
+howpublished = {\url{http://online.liebertpub.com/doi/abs/10.1089/cyber.2011.1534}},
+note = {Letzter Zugriff am 5.10.2015}
 }
-@misc{w3sparql, 
- author = {various},
- title = {SPARQL Update},
- howpublished = {\url {http://www.w3.org/Submission/SPARQL-Update/}},
- note = {Zuletzt gesehen: 03/2015}
+
+@misc{Cohn,
+author = {Jeffrey P. Cohn},
+title = {Citizen Science: Can volunteers do real research? BioScience},
+year = {2008},
+howpublished = {\url{http://bioscience.oxfordjournals.org/content/58/3/192.abstract}},
+note = {Letzter Zugriff am 5.10.2015}
+}
+
+@book{Haklay,
+author = {M. Haklay},
+title = {Citizen Science and Volunteered Geographic Information - Overview and typology of participation. Sui, D.Z., Elwood, S. and M.F. Goodchild (eds.), 2013. Crowdsourcing Geographic Knowledge: Volunteered Geographic Information (VGI) in Theory and Practice},
+publisher = {Springer},
+location = {Berlin},
+year = {2013},
+note = {Letzter Zugriff über \url{https://github.com/ThomasK81/CitizenScienceCourse/blob/master/Seminar20150422/haklaycrowdsourcinggeographicknowledge.pdf} am 5.10.2015}
+}
+
+@mist{CW,
+author = {Kevin Crowston \& Andrea Wiggins},
+title = {From Conservation to Crowdsourcing: A Typology of Citizen Science. Proceedings of the 44th Annual Hawaii International Conference on System Sciences},
+year = {2011},
+howpublished = {\url{http://andreawiggins.com/wp-content/uploads/2013/10/Wiggins2011HICSS.pdf}},
+note = {Letzter Zugriff am 5.10.2015}
 }
